--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <h1>Proyecto Backend</h1>
 <body>
     
+
+
+    <script src="index.js"></script>
+    <script src="products.json"></script>
 </body>
 </html>
