--- a/public/index.html
+++ b/public/index.html
@@ -1,112 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-			crossorigin="anonymous"
-		/>
-    <title>DesafioMocks</title>
+    <title>Desafio clase 26</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous" />
 </head>
+
 <body>
-    <div class="container-lg">
-        <h2>LISTA DE PRODUCTOS</h2>
-        <div class="container-lg" id="productList"></div>
+
+
+    <div class="container" style="margin-top: 30px;">
+        <!-- USUARIO-->
+        <div id="divBienvenida" style="display:none" class="container">
+            <div class="row" style="background-color:deepskyblue">
+                <div class="col-9" style="margin:1em auto 1em; ">
+                    <h4>Hola <spann id="usuarioLogin"></spann>
+                    </h4>
+                </div>
+                <div class="col-2" style="margin:1em auto 1em"> <button onclick="window.location.href='/logout.html'"
+                        class="btn btn-danger">Salir</button></div>
+            </div>
+        </div>
+        <!-- PRODUCTOS -->
+        <!-- TABLA PRODUCTOS -->
+        <h3 class="mt-10 text-primary">Lista de productos</h3>
+        <div class="table-responsive">
+            <table class="table table-dark" id="tabla">
+                <thead>
+                    <tr style="color: rgba(13, 110, 253);">
+                        <th>Titulo</th>
+                        <th>Precio</th>
+                        <th>Imagen</th>
+                    </tr>
+                </thead>
+                <tbody id="tBody">
+                </tbody>
+            </table>
+        </div>
     </div>
 
-    <div class="container-lg">
-        <h2 id="chatHeader">CHAT DE LA PAGINA</h2>
-        <form onsubmit="return addMessage(this)">
-            <div class="my-3">
-                <label for="email" class="form-label">Email</label>
-                <input
-                    id="email"
-                    class="form-control"
-                    type="text"
-                    name="email"
-                    placeholder="Escribe tu email aqui"
-                    required
-                />
+    <!-- CHAT -->
+
+    <div class="container" style="margin-top: 30px;">
+        <h3 class="mt-10 text-primary">Chat</h3>
+        <!-- TABLA CHAT -->
+        <div class="mb-3" id="textChat">
+            <h4 class="mt-10 text-primary" id='porcentaje'></h4>
+            <div class="table-responsive">
+                <table class="table" id="tablaChat">
+                    <thead>
+                        <tr>
+                            <th>Usuario</th>
+                            <th>Avatar</th>
+                            <th>Mensaje</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tBodyChat">
+                    </tbody>
+                </table>
             </div>
-            <div class="my-3">
-                <label for="firstName" class="form-label">Nombre</label>
-                <input
-                    id="firstName"
-                    class="form-control"
-                    type="text"
-                    name="firstName"
-                    placeholder="Escribe tu nombre aqui"
-                    required
-                />
+        </div>
+        <!-- FORMULARIO CHAT -->
+        <form onsubmit="return enviarChat()" name="formularioChat">
+            <div class="mb-3">
+                <input type="email" class="form-control" id="email" name="email" placeholder="Ingresa tu email">
             </div>
-            <div class="my-3">
-                <label for="lastName" class="form-label">Apellido</label>
-                <input
-                    id="lastName"
-                    class="form-control"
-                    type="text"
-                    name="lastName"
-                    placeholder="Escribe tu apellido aqui"
-                    required
-                />
+            <div class="mb-3">
+                <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Ingresa tu nombre">
             </div>
-            <div class="my-3">
-                <label for="age" class="form-label">Edad</label>
-                <input
-                    id="age"
-                    class="form-control"
-                    type="text"
-                    name="age"
-                    placeholder="Escribe tu edad aqui"
-                    required
-                />
+            <div class="mb-3">
+                <input type="text" class="form-control" id="apellido" name="apellido" placeholder="Ingresa tu apellido">
             </div>
-            <div class="my-3">
-                <label for="alias" class="form-label">Alias</label>
-                <input
-                    id="alias"
-                    class="form-control"
-                    type="text"
-                    name="alias"
-                    placeholder="Escribe tu alias aqui"
-                    required
-                />
+            <div class="mb-3">
+                <input type="text" class="form-control" id="edad" name="edad" placeholder="Ingresa tu edad">
             </div>
-            <img  src="" alt="">
-            <div class="my-3">
-                <label for="avatar" class="form-label">Avatar</label>
-                <input
-                    id="avatar"
-                    class="form-control"
-                    type="url"
-                    name="avatar"
-                    placeholder="Escribe el link de la imagen de tu avatar aqui"
-                    required
-                />
+            <div class="mb-3">
+                <input type="text" class="form-control" id="alias" name="alias" placeholder="Ingresa tu alias">
             </div>
-            <div class="" id="chatBox"></div>
-            <div class="my-3">
-                <label for="message" class="form-label">Mensaje</label>
-                <input
-                    id="message"
-                    class="form-control"
-                    type="text"
-                    name="message"
-                    placeholder="Escribe tu mensaje aqui"
-                    required
-                />
+            <div class="mb-3">
+                <input type="text" class="form-control" id="avatar" name="avatar" placeholder="URL avatar">
             </div>
-            <button class="btn btn-primary" type="submit">Enviar</button>
+            <div class="mb-3">
+                <input type="text" class="form-control" id="msg" name="msg" placeholder="Ingrese tu mensaje">
+            </div>
+            <div class="mb-3">
+                <input type="submit" value="Enviar mensaje" class="btn btn-primary" />
+            </div>
         </form>
+
     </div>
-    <!-- CDN para utilizar normalizr desde el FRONT -->
-    <script src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js
-    "></script>
+
+    <!-- SCRIPTS -->
+    <script src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/index.js"></script>
+    <script src="./index.js"></script>
 </body>
+
 </html>
